<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Where Arf Thou?</string>
    <string name="view_report_map">View Report Map</string>
    <string name="create_new_lost_report">Create new lost report</string>
    <string name="create_new_found_report">Create new found report</string>
    <string name="title_activity_2">Found Report</string>
    <string name="title_activity_lost_report">Create New Lost Report</string>
    <string name="title_activity_found_report">Create New Found Report</string>
    <string name="title_activity_report_map">ReportMap</string>
    <string name="lost_report">Lost Report</string>
    <string name="report_map">Report Map</string>
    <string name="found_report">Found Report</string>
    <string name="title_activity_maps">Map</string>
    <string name="get_image">Get image</string>
    <string name="wat_icon">Where Arf Thou Icon</string>
    <string name="wat_title">Where Arf Thou?</string>
    <string name="content_description_photo_add_found">Take a photo or add an image.</string>
    <string name="edit_found_description">Tap to enter a description...</string>
    <string name="edit_location">Tap GPS icon or enter manual location...</string>
    <string name="edit_found_contact">Tap to enter phone number...</string>
    <string name="button_found_submit">Submit</string>
    <string name="location_spotted_text">Location Spotted:</string>
    <string name="your_contact_info_Text">Your Contact Info:</string>
    <string name="gps_icon">GPS Icon</string>
    <string name="tag_icon">Tag Icon</string>
    <string name="edit_pet_name">Tap to enter your pet\'s name...</string>
    <string name="pet_name_text">Name:</string>
    <string name="edit_lost_description">Tap to enter a description...</string>
    <string name="last_seen_text">Last Seen</string>
    <string name="edit_last_seen">Tap GPS icon or enter manual location...</string>
    <string name="edit_lost_contact">Tap to enter phone number...</string>
    <string name="button_lost_submit">Submit</string>
    <string name="content_description_photo_add_lost">Take a photo or add an image</string>
    <string name="description_text">Description:</string>
    <string name="tag_info_text">Tag:</string>
    <string name="text_confirm">The following report information has been submitted:</string>
    <string name="button_ok">OK</string>
    <string name="image_display">Display Image</string>
    <string android:name="com.twitter.sdk.android.CONSUMER_KEY">ccBwyaBsXrlj9lI7dqbpAuw5x</string>
    <string android:name="com.twitter.sdk.android.CONSUMER_SECRET">w2yHKx1xzl6cwn2k0X16OTtatZAAr7DDmKdA492lvQEk3JBAWY</string>
    <string name="button_tweet">Tweet This</string>
    <string name="title_report_confirmation">Report Submitted</string>
    <string name="view_all">View All Reports</string>
    <string name="add_new">Add New Report</string>
    <string name="owner">Owner</string>
    <string name="pet_name">Pet Name</string>
    <string name="last_seen">Last Seen</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="ownerName">Owner Name</string>
    <string name="lastSeen">Last Seen</string>
    <string name="prompt_username">User Name</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_con_password">Confirm Password</string>
    <string name="lostReportLocationBtn">Lost Report Location Button</string>
    <string name="login_bn_label">Login</string>
    <string name="register_bn_label">Register</string>
    <string name="sign_up_text">New user? Sign Up</string>
    <string name="onClick">onClick</string>
    <string name="lastSeenLostReport">Last seen location for the Lost Report</string>
    <string name="edit_tag_hint">Tap to enter a tag...</string>
    <string name="agree_terms_privacy">By continuing, you agree to our &lt;a href=https://sites.wp.odu.edu/irresistibleodupwd/legal-terms-and-conditions>Terms of Use&lt;/a> and read the &lt;a href=https://sites.wp.odu.edu/irresistibleodupwd/legal-privacy-policy>Privacy Policy&lt;/a></string>
    <string name="content_description_tag_button">Add a tag.</string>

</resources>
