<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.odu.cs.air411.wherearfthou.LoginActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_username"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18dp"
            android:id="@+id/tx1"
            android:layout_alignParentLeft="true"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx1"
            android:id="@+id/username"
            android:inputType="text"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18dp"
            android:id="@+id/tx2"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/username"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx2"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            />

        <Button
            android:id="@+id/login_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_color"
            android:text="@string/login_bn_label"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textStyle="bold"

            />
    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_text"
            android:textSize="18dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:id="@+id/sign_up"

            />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="276dp"
            android:layout_height="159dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="73dp"
            android:layout_marginEnd="62dp"
            android:layout_marginBottom="87dp"
            app:srcCompat="@drawable/waticon" />

    </RelativeLayout>
</LinearLayout>